--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 Flask==2.2.5
+flask-cors==4.0.0
 gunicorn==20.1.0
 pytest==7.4.0
 flake8==6.1.0
+pandas==2.2.2
+numpy==1.26.4
+joblib==1.3.2
+lightgbm==4.3.0
